style.css
/* ... */
.mt-0 {
  margin-top: 0;
}

.mt-1 {
  margin-top: 4px !important;
}

.mt-2 {
  margin-top: 8px;
}

.mr-0 {
  margin-right: 0;
}

.mb-0 {
  margin-bottom: 0;
}

.mb-1 {
  margin-bottom: 4px;
}

.mb-2 {
  margin-bottom: 8px;
}

.ml-0 {
  margin-left: 0;
}

.o-h {
  overflow: hidden !important;
}

p {
  margin: 8px 0;
}

.transparent {
  background-color: transparent;
  border: none;
}

input,
textarea {
  color: var(--text) !important;
  background-color: var(--neutral);
  border: 1px solid var(--outline);
  margin: 4px;
  padding: 4px 6px;
  border-radius: 8px;
  outline: none;
  resize: none;
  font: inherit;
}

input::placeholder,
textarea::placeholder {
  color: var(--label);
}

.fg {
  flex: 1;
}

.ovh {
  min-height: 0;
  overflow: auto;
  margin: 0;
  touch-action: pan-y !important;
}

/* Table */
table {
  border-collapse: collapse;
  border-spacing: 0;
}

table > tbody > tr > td div {
  width: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
}

tr {
  transition: none !important;
}

tr:hover {
  background-color: var(--header);
}

thead::after {
  content: "";
  position: absolute;
  top: 30px;
  left: 0;
  width: 100%;
  height: 1px;
  background-color: var(--outline);
  transition: background-color 1.5s var(--easing-function);
}

thead {
  position: sticky;
  top: 0;
  background: var(--root);
}

thead tr {
  height: 30px;
}

th {
  padding: 4px 8px;
  font-weight: normal;
  text-align: left;
}

td {
  padding: 4px 8px;
}

.table-selected {
  background-color: var(--neutral) !important;
  color: var(--text);
}

.sidebar {
  background-color: var(--unfocused);
  display: flex;
  /* overflow-y: scroll; */
  overflow-y: auto;
  padding: 4px;
  gap: 2px;
  min-width: 32px;
  flex-shrink: 0;
}

.menu-bar {
  display: flex;
  width: 100%;
  gap: 0;
  flex-wrap: wrap;
  background-color: var(--unfocused);
}
.menu-bar button {
  margin: 0;
  border-radius: 0;
  padding: 6px 16px;
}

[data-sidebar-type="horizontal"] .sidebar,
[data-sidebar-type="horizontal"] .text-sidebar {
  flex-direction: row;
  overflow-x: auto;
  overflow-y: hidden;
  flex-shrink: 0;
  width: 100%;
}

.sidebar button {
  padding: 4px;
  display: flex;
  border-radius: 4px;
  margin: 2px;
  width: 32px;
  flex-shrink: 0;
}

.sidebar button:hover {
  background-color: var(--neutral);
}

.sidebar button:focus,
.sidebar button:active {
  background-color: transparent;
}

@keyframes slide-up {
  0% {
    transform: translateY(50%) scale(0.85);
    opacity: 0;
    pointer-events: all;
  }

  99% {
    transform: translateY(0);
    opacity: 1;
    pointer-events: all;
  }

  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes slide-down {
  0% {
    transform: translateY(0);
    opacity: 1;
    pointer-events: none;
  }

  100% {
    transform: translateY(50%) scale(0.85);
    opacity: 0;
    pointer-events: none;
  }
}

@keyframes shortSlideUp {
  0% {
    transform: translateY(25%) scale(0.85);
    opacity: 0;
    pointer-events: none;
  }

  99% {
    transform: translateY(0);
    opacity: 1;
    pointer-events: none;
  }

  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes shortSlideDown {
  0% {
    transform: translateY(0);
    opacity: 1;
    pointer-events: none;
  }

  100% {
    transform: translateY(25%) scale(0.85);
    opacity: 0;
    pointer-events: none;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes fadeOut {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

[disabled] {
  background-color: var(--unfocused) !important;
  color: rgba(var(--text-rgb), 0.5) !important;
  cursor: var(--cursor-not-allowed) 10 10, not-allowed !important;
}

.desktop .dock {
  display: flex;
  z-index: 1;
  position: fixed;
  bottom: 6px;
  left: 6px;
  width: calc(100% - 12px);
  z-index: 9999999;
  background-color: var(--root);
  border-radius: 8px;
  border: 1px solid var(--outline);
  box-shadow: 0px 0px 28px 2px rgba(0, 0, 0, 0.41);

  animation: simpleSlideUp var(--long-animation-duration) var(--easing-function)
    forwards;
}

.desktop .dock.hiding {
  animation: simpleSlideDown var(--long-animation-duration)
    var(--easing-function) forwards;
}

[data-dock-style="compact"] .desktop .dock {
  max-width: 680px;
  left: 50%;
  animation: compactSimpleSlideUp var(--long-animation-duration)
    var(--easing-function) forwards;
}

[data-dock-style="compact"] .desktop .dock.hiding {
  animation: compactSimpleSlideDown var(--long-animation-duration)
    var(--easing-function) forwards;
}

[data-dock-style="minimal"] .desktop .dock {
  width: max-content;
  max-width: 680px;
  left: 50%;
  animation: compactSimpleSlideUp var(--long-animation-duration)
    var(--easing-function) forwards;
}

[data-dock-style="minimal"] .desktop .dock.hiding {
  animation: compactSimpleSlideDown var(--long-animation-duration)
    var(--easing-function) forwards;
}

.desktop .dock.collapse {
  animation: slideLeft var(--long-animation-duration) var(--easing-function)
    forwards;
}

.desktop .dock .toolbar-button {
  margin: 0;
  padding: 8px 12px;
  background: var(--header);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
  outline: 0;
  border-radius: 0;
}

.desktop .dock > .toolbar-button:first-child {
  border-right: 1px solid var(--outline);
  border-radius: 8px 0 0 8px;
}

.desktop .dock > .toolbar-button:last-child {
  border-left: 1px solid var(--outline);
  border-radius: 0 8px 8px 0;
}

.desktop .dock .dock-item {
  background-color: var(--root);
  padding: 4px 12px;
  display: flex;
  gap: 8px;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
  border-radius: 0;
}

.desktop .dock .dock-item.selected {
  background-color: var(--neutral);
}

.desktop .dock .items {
  display: flex;
  flex: 1;
  overflow: auto;
  background-color: var(--root);
}

.list-item {
  display: block;
  width: 100%;
  padding: 4px;
  word-wrap: break-word;
  white-space: pre-wrap;
}
/* ... */

